Final prueba_f_intro_ruby.rb

--- a/rober_page.html
+++ b/rober_page.html
@@ -33,53 +33,51 @@
         </nav> 
 
         <div class="container text-center mt-5 pt-5">
-            <ul class="list-group list-group-horizontal-md min-width rounded-0">
-                <li class="list-group-item"><img class="img-fluid" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000MR0044630370503597I01_DXXX.jpg" alt="img=0"></li>
-                <li class="list-group-item"><img class="img-fluid" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000ML0044630370405134I01_DXXX.jpg" alt="img=1"></li>
-            </ul> 
-            <ul class="list-group list-group-horizontal-md min-width rounded-0">
-                <li class="list-group-item"><img class="img-fluid" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000MR0044630360503596I01_DXXX.jpg" alt="img=2"></li>
-                <li class="list-group-item"><img class="img-fluid" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000ML0044630360405133I01_DXXX.jpg" alt="img=3"></li>
-                <li class="list-group-item"><img class="img-fluid" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000MR0044630350503595I01_DXXX.jpg" alt="img=4"></li>  
-            </ul> 
-            <ul class="list-group list-group-horizontal-md min-width rounded-0">
-                <li class="list-group-item"><img class="img-fluid" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000ML0044630350405132I01_DXXX.jpg" alt="img=5"></li>
-                <li class="list-group-item"><img class="img-fluid" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000MR0044630340503594I01_DXXX.jpg" alt="img=6"></li>
-            </ul> 
-            <ul class="list-group list-group-horizontal-md min-width rounded-0">
-                <li class="list-group-item"><img class="img-fluid" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000ML0044630340405131I01_DXXX.jpg" alt="img=7"></li>
-                <li class="list-group-item"><img class="img-fluid" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000MR0044630330503593I01_DXXX.jpg" alt="img=8"></li>
-                <li class="list-group-item"><img class="img-fluid" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000ML0044630330405130I01_DXXX.jpg" alt="img=9"></li>  
-            </ul> 
-            <ul class="list-group list-group-horizontal-md min-width rounded-0">
-                <li class="list-group-item"><img class="img-fluid" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000MR0044630320503592I01_DXXX.jpg" alt="img=10"></li>
-                <li class="list-group-item"><img class="img-fluid" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000ML0044630320405129I01_DXXX.jpg" alt="img=11"></li>
-            </ul> 
-            <ul class="list-group list-group-horizontal-md min-width rounded-0">
-                <li class="list-group-item"><img class="img-fluid" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000MR0044630310503591I01_DXXX.jpg" alt="img=12"></li>
-                <li class="list-group-item"><img class="img-fluid" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000ML0044630310405128I01_DXXX.jpg" alt="img=13"></li>
-                <li class="list-group-item"><img class="img-fluid" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000MR0044630300503590I01_DXXX.jpg" alt="img=14"></li>  
-            </ul> 
-            <ul class="list-group list-group-horizontal-md min-width rounded-0">
-                <li class="list-group-item"><img class="img-fluid" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000ML0044630300405127I01_DXXX.jpg" alt="img=15"></li>
-                <li class="list-group-item"><img class="img-fluid" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000MR0044630290503589I01_DXXX.jpg" alt="img=16"></li>
-            </ul> 
-            <ul class="list-group list-group-horizontal-md min-width rounded-0">
-                <li class="list-group-item"><img class="img-fluid" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000ML0044630290405126I01_DXXX.jpg" alt="img=17"></li>
-                <li class="list-group-item"><img class="img-fluid" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000MR0044630280503588I01_DXXX.jpg" alt="img=18"></li>
-                <li class="list-group-item"><img class="img-fluid" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000ML0044630280405125I01_DXXX.jpg" alt="img=19"></li>  
-            </ul> 
-            <ul class="list-group list-group-horizontal-md min-width rounded-0">
-                <li class="list-group-item"><img class="img-fluid" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000MR0044630270503587I01_DXXX.jpg" alt="img=20"></li>
-                <li class="list-group-item"><img class="img-fluid" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000ML0044630270405124I01_DXXX.jpg" alt="img=21"></li>
-            </ul> 
-            <ul class="list-group list-group-horizontal-md min-width rounded-0">
-                <li class="list-group-item"><img class="img-fluid" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000MR0044630260503586I01_DXXX.jpg" alt="img=22"></li>
-                <li class="list-group-item"><img class="img-fluid" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000ML0044630260405123I01_DXXX.jpg" alt="img=23"></li>
-                <li class="list-group-item"><img class="img-fluid" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000MR0044630250503585I01_DXXX.jpg" alt="img=24"></li>  
-            </ul> 
-            <ul class="list-group list-group-horizontal-md min-width rounded-0">     
-            </ul>            
+                <ul class="list-group list-group-horizontal-md min-width rounded-0">
+                    <li class="list-group-item"><img class="img-fluid h-100" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000MR0044631180503678C00_DXXX.jpg" alt="img=0"></li>
+                    <li class="list-group-item"><img class="img-fluid h-100" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000ML0044631180305215C00_DXXX.jpg" alt="img=1"></li>
+                </ul> 
+                <ul class="list-group list-group-horizontal-md min-width rounded-0">
+                    <li class="list-group-item"><img class="img-fluid h-100" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000MR0044631170503677C00_DXXX.jpg" alt="img=2"></li>
+                    <li class="list-group-item"><img class="img-fluid h-100" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000ML0044631170305214C00_DXXX.jpg" alt="img=3"></li>
+                    <li class="list-group-item"><img class="img-fluid h-100" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000MR0044631160503676C00_DXXX.jpg" alt="img=4"></li>  
+                </ul> 
+                <ul class="list-group list-group-horizontal-md min-width rounded-0">
+                    <li class="list-group-item"><img class="img-fluid h-100" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000ML0044631160305213C00_DXXX.jpg" alt="img=5"></li>
+                    <li class="list-group-item"><img class="img-fluid h-100" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000MR0044631150503675C00_DXXX.jpg" alt="img=6"></li>
+                </ul> 
+                <ul class="list-group list-group-horizontal-md min-width rounded-0">
+                    <li class="list-group-item"><img class="img-fluid h-100" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000MR0044631300503690C00_DXXX.jpg" alt="img=7"></li>
+                    <li class="list-group-item"><img class="img-fluid h-100" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000ML0044631300305227C00_DXXX.jpg" alt="img=8"></li>
+                    <li class="list-group-item"><img class="img-fluid h-100" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000MR0044631290503689C00_DXXX.jpg" alt="img=9"></li>  
+                </ul> 
+                <ul class="list-group list-group-horizontal-md min-width rounded-0">
+                    <li class="list-group-item"><img class="img-fluid h-100" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000ML0044631290305226C00_DXXX.jpg" alt="img=10"></li>
+                    <li class="list-group-item"><img class="img-fluid h-100" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000MR0044631280503688C00_DXXX.jpg" alt="img=11"></li>
+                </ul> 
+                <ul class="list-group list-group-horizontal-md min-width rounded-0">
+                    <li class="list-group-item"><img class="img-fluid h-100" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000ML0044631280305225C00_DXXX.jpg" alt="img=12"></li>
+                    <li class="list-group-item"><img class="img-fluid h-100" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000MR0044631270503687C00_DXXX.jpg" alt="img=13"></li>
+                    <li class="list-group-item"><img class="img-fluid h-100" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000ML0044631270305224C00_DXXX.jpg" alt="img=14"></li>  
+                </ul> 
+                <ul class="list-group list-group-horizontal-md min-width rounded-0">
+                    <li class="list-group-item"><img class="img-fluid h-100" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000ML0044631200305217C00_DXXX.jpg" alt="img=15"></li>
+                    <li class="list-group-item"><img class="img-fluid h-100" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000MR0044631090503669C00_DXXX.jpg" alt="img=16"></li>
+                </ul> 
+                <ul class="list-group list-group-horizontal-md min-width rounded-0">
+                    <li class="list-group-item"><img class="img-fluid h-100" src="http://mars.jpl.nasa.gov/msl-raw-images/proj/msl/redops/ods/surface/sol/01000/opgs/edr/ccam/CR0_486264264EDR_F0481570CCAM02000M_.JPG" alt="img=17"></li>
+                    <li class="list-group-item"><img class="img-fluid h-100" src="http://mars.jpl.nasa.gov/msl-raw-images/proj/msl/redops/ods/surface/sol/01000/opgs/edr/ccam/CR0_486263086EDR_F0481570CCAM02000M_.JPG" alt="img=18"></li>
+                    <li class="list-group-item"><img class="img-fluid h-100" src="http://mars.jpl.nasa.gov/msl-raw-images/proj/msl/redops/ods/surface/sol/01000/soas/rdr/ccam/CR0_486264264PRC_F0481570CCAM02000L1.PNG" alt="img=19"></li>  
+                </ul> 
+                <ul class="list-group list-group-horizontal-md min-width rounded-0">
+                    <li class="list-group-item"><img class="img-fluid h-100" src="http://mars.jpl.nasa.gov/msl-raw-images/proj/msl/redops/ods/surface/sol/01000/soas/rdr/ccam/CR0_486263086PRC_F0481570CCAM02000L1.PNG" alt="img=20"></li>
+                    <li class="list-group-item"><img class="img-fluid h-100" src="http://mars.jpl.nasa.gov/msl-raw-images/proj/msl/redops/ods/surface/sol/01000/opgs/edr/ncam/NLB_486272784EDR_F0481570NCAM00415M_.JPG" alt="img=21"></li>
+                </ul> 
+                <ul class="list-group list-group-horizontal-md min-width rounded-0">
+                    <li class="list-group-item"><img class="img-fluid h-100" src="http://mars.jpl.nasa.gov/msl-raw-images/proj/msl/redops/ods/surface/sol/01000/opgs/edr/ncam/NLB_486271176EDR_F0481570NCAM00322M_.JPG" alt="img=22"></li>
+                    <li class="list-group-item"><img class="img-fluid h-100" src="http://mars.jpl.nasa.gov/msl-raw-images/proj/msl/redops/ods/surface/sol/01000/opgs/edr/ncam/NLB_486270860EDR_F0481570NCAM00323M_.JPG" alt="img=23"></li>
+                    <li class="list-group-item"><img class="img-fluid h-100" src="http://mars.jpl.nasa.gov/msl-raw-images/proj/msl/redops/ods/surface/sol/01000/opgs/edr/ncam/NLB_486265192EDR_S0481570NCAM00546M_.JPG" alt="img=24"></li>     
+                </ul>            
         </div>
     </body>
 </html>
