--- a/rover_page.html
+++ b/rover_page.html
@@ -6,10 +6,10 @@
 
         <!-- Metas -->
         <meta name="author" content="Jorge Sifontes">
-        <meta name="description" content="Images direct from NASA Mars Robers">
-        <meta name="keywords" content="NASA, Mars, Robers">
+        <meta name="description" content="Images direct from NASA Mars Rovers">
+        <meta name="keywords" content="NASA, Mars, Rover, Rovers">
 
-        <title>Rober Page</title>
+        <title>Rover Page</title>
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -26,7 +26,7 @@
             <div class="container">
                 <i class="fas fa-user-astronaut fa-3x"></i>
                 <i class="fas fa-rocket fa-3x"></i>
-                <h1>ROBER PAGE</h1>
+                <h1>ROVER PAGE</h1>
                 <i class="fas fa-robot fa-3x"></i>
                 <i class="fas fa-meteor fa-3x"></i>
             </div>
@@ -40,7 +40,7 @@
                 <ul class="list-group list-group-horizontal-md min-width rounded-0">
                     <li class="list-group-item"><img class="img-fluid h-100" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000MR0044631170503677C00_DXXX.jpg" alt="img=2"></li>
                     <li class="list-group-item"><img class="img-fluid h-100" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000ML0044631170305214C00_DXXX.jpg" alt="img=3"></li>
-                    <li class="list-group-item"><img class="img-fluid h-100" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000MR0044631160503676C00_DXXX.jpg" alt="img=4"></li>  
+                    <li class="list-group-item"><img class="img-fluid h-100" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000MR0044631160503676C00_DXXX.jpg" alt="img=4"></li>
                 </ul> 
                 <ul class="list-group list-group-horizontal-md min-width rounded-0">
                     <li class="list-group-item"><img class="img-fluid h-100" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000ML0044631160305213C00_DXXX.jpg" alt="img=5"></li>
@@ -49,7 +49,7 @@
                 <ul class="list-group list-group-horizontal-md min-width rounded-0">
                     <li class="list-group-item"><img class="img-fluid h-100" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000MR0044631300503690C00_DXXX.jpg" alt="img=7"></li>
                     <li class="list-group-item"><img class="img-fluid h-100" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000ML0044631300305227C00_DXXX.jpg" alt="img=8"></li>
-                    <li class="list-group-item"><img class="img-fluid h-100" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000MR0044631290503689C00_DXXX.jpg" alt="img=9"></li>  
+                    <li class="list-group-item"><img class="img-fluid h-100" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000MR0044631290503689C00_DXXX.jpg" alt="img=9"></li>
                 </ul> 
                 <ul class="list-group list-group-horizontal-md min-width rounded-0">
                     <li class="list-group-item"><img class="img-fluid h-100" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000ML0044631290305226C00_DXXX.jpg" alt="img=10"></li>
@@ -58,7 +58,7 @@
                 <ul class="list-group list-group-horizontal-md min-width rounded-0">
                     <li class="list-group-item"><img class="img-fluid h-100" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000ML0044631280305225C00_DXXX.jpg" alt="img=12"></li>
                     <li class="list-group-item"><img class="img-fluid h-100" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000MR0044631270503687C00_DXXX.jpg" alt="img=13"></li>
-                    <li class="list-group-item"><img class="img-fluid h-100" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000ML0044631270305224C00_DXXX.jpg" alt="img=14"></li>  
+                    <li class="list-group-item"><img class="img-fluid h-100" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000ML0044631270305224C00_DXXX.jpg" alt="img=14"></li>
                 </ul> 
                 <ul class="list-group list-group-horizontal-md min-width rounded-0">
                     <li class="list-group-item"><img class="img-fluid h-100" src="http://mars.jpl.nasa.gov/msl-raw-images/msss/01000/mcam/1000ML0044631200305217C00_DXXX.jpg" alt="img=15"></li>
@@ -67,7 +67,7 @@
                 <ul class="list-group list-group-horizontal-md min-width rounded-0">
                     <li class="list-group-item"><img class="img-fluid h-100" src="http://mars.jpl.nasa.gov/msl-raw-images/proj/msl/redops/ods/surface/sol/01000/opgs/edr/ccam/CR0_486264264EDR_F0481570CCAM02000M_.JPG" alt="img=17"></li>
                     <li class="list-group-item"><img class="img-fluid h-100" src="http://mars.jpl.nasa.gov/msl-raw-images/proj/msl/redops/ods/surface/sol/01000/opgs/edr/ccam/CR0_486263086EDR_F0481570CCAM02000M_.JPG" alt="img=18"></li>
-                    <li class="list-group-item"><img class="img-fluid h-100" src="http://mars.jpl.nasa.gov/msl-raw-images/proj/msl/redops/ods/surface/sol/01000/soas/rdr/ccam/CR0_486264264PRC_F0481570CCAM02000L1.PNG" alt="img=19"></li>  
+                    <li class="list-group-item"><img class="img-fluid h-100" src="http://mars.jpl.nasa.gov/msl-raw-images/proj/msl/redops/ods/surface/sol/01000/soas/rdr/ccam/CR0_486264264PRC_F0481570CCAM02000L1.PNG" alt="img=19"></li>
                 </ul> 
                 <ul class="list-group list-group-horizontal-md min-width rounded-0">
                     <li class="list-group-item"><img class="img-fluid h-100" src="http://mars.jpl.nasa.gov/msl-raw-images/proj/msl/redops/ods/surface/sol/01000/soas/rdr/ccam/CR0_486263086PRC_F0481570CCAM02000L1.PNG" alt="img=20"></li>
